--- a/src/style.scss
+++ b/src/style.scss
@@ -10,7 +10,7 @@
     align-items: center;
     padding: 20px;
     margin-bottom: 20px;
-    background-color: aquamarine;
+    background-color:aqua;
 }
 
 #navbar-header {
